--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,9 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: |
+	dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -p ${{ secrets.GITHUB_TOKEN }} -u ${{ github.repository_owner }} -n private-packages
+	dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
