--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,8 +1,16 @@
+# .NET workflow with private github packages
 name: .NET
 
+env:
+    # repository secret PACKAGES_TOKEN is required to access private packages
+    NUGET_AUTH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
+    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+    DOTNET_CLI_TELEMETRY_OPTOUT: true
+    DOTNET_NOLOGO: true
+    
 on:
   push:
-    branches: [ develop, master ]
+    branches: [ develop, master, feature/* ]
   pull_request:
     branches: [ develop, master ]
 
@@ -23,9 +31,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+        source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
     - name: Restore dependencies
-      run: |
-        dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -p ${{ secrets.GITHUB_TOKEN }} -u ${{ github.repository_owner }} -n private-packages --store-password-in-clear-text
+      run:
         dotnet restore
     - name: Build
       run: dotnet build --no-restore
